# UniversalReference

./: .gitignore  CMakeLists.txt  README.md  UniversalReference.sln  common.props  test.txt
LibCommonUtil/: CMakeLists.txt
LibCommonUtil/cpp/Public/: Timer.cpp  Timer.h
Tuto1_Move_semantics_1/: CMakeLists.txt  Source.cpp  Tuto1_Move_semantics_1.vcxproj
Tuto1_Move_semantics_1/cpp/: Source.cpp
Tuto1_Move_semantics_2/: CMakeLists.txt  Source.cpp  Tuto1_Move_semantics_2.vcxproj
Tuto1_Move_semantics_2/cpp/: Source.cpp
Tuto2_Rule_Of_Five/: CMakeLists.txt  Source.cpp  Tuto2_Rule_Of_Five.vcxproj  Tuto2_Rule_Of_Five.vcxproj.filters
Tuto2_Rule_Of_Five/cpp/: Source.cpp
Tuto2_Rule_of_zero/: CMakeLists.txt  Source.cpp  Tuto2_Rule_of_zero.vcxproj
Tuto2_Rule_of_zero/cpp/: Source.cpp
Tuto3_PerfectForwarding/: CMakeLists.txt  Source.cpp  Tuto3_PerfectForwarding.vcxproj
Tuto3_PerfectForwarding/cpp/: Source.cpp
Tuto4_UR_and_Type_Trait/: CMakeLists.txt  Source.cpp  Tuto4_UR_and_Type_Trait.vcxproj
Tuto4_UR_and_Type_Trait/cpp/: Source.cpp
Tuto5_overloading/: CMakeLists.txt
Tuto5_overloading/cpp/: Source.cpp
Tuto6_SSO/: CMakeLists.txt
Tuto6_SSO/cpp/: Source.cpp
UniversalReference/: Source.cpp  UniversalReference.vcxproj
cmake/: CommonLink.cmake  CommonSetting.cmake  UtilMacro.cmake
lib/vld/: readme.txt  vld.ini
project_generator/: linux.sh  win32.sh
testbed/: CMakeLists.txt  Source.cpp  generate_linux_project.sh  testbed.vcxproj
testbed/cpp/Platform/linux/: main.cpp
testbed/cpp/Platform/standard/: main.cpp
testbed/src/: Source.cpp
